[package]
name = "material-yew"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.11.4"
js-sys = "0.3.81"
wasm-bindgen = "0.2.104"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.81"
features = [
    "HtmlFormElement",
    "CustomEvent"
]

[workspace]
members = [
    "build",
    "usages",
    "matdemo"
]
