[package]
name = "matdemo"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
material-yew = { path = ".." }
wasm-bindgen = "0.2"
log = "0.4.20"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
