[package]
name = "usages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
proc-macro2 = "1.0.79"
quote = "1.0.36"
syn = { version = "2.0.58", features = ["full"] }
textwrap = "0.16.1"
eyre = "0.6.12"

yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
material-yew = { path = "../" }
prettyplease = "0.2.17"
